styles: fix post image text on mobile

--- a/client/components/footer/Footer.scss
+++ b/client/components/footer/Footer.scss
@@ -5,7 +5,7 @@
   .footer__container {
     &--top {
       span {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         color: $black;
         margin-right: 0.5rem;
         font-weight: 500;
