--- a/client/components/posts/PostsImage.scss
+++ b/client/components/posts/PostsImage.scss
@@ -14,30 +14,39 @@
 
   .overlay-image {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100%;
     background-color: rgba($blue, 0.85);
     position: absolute;
     z-index: 2;
 
-    .posts-image--title,
-    .posts-image--text {
-      color: $white;
-      z-index: 2;
+    &--text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 70%;
+      height: 100%;
+      text-align: center;
+
+      .posts-image--title,
+      .posts-image--text {
+        color: $white;
+        z-index: 2;
+      }
+
+      .posts-image--title {
+        font-weight: 500;
+        letter-spacing: 0.6rem;
+      }
+
+      .posts-image--text {
+        font-weight: 300;
+        letter-spacing: 0.3rem;
+      }
     }
 
-    .posts-image--title {
-      font-weight: 500;
-      letter-spacing: 0.6rem;
-    }
-
-    .posts-image--text {
-      font-weight: 300;
-      letter-spacing: 0.3rem;
-    }
   }
 }
 
